--- a/personal_site/templates/index.html
+++ b/personal_site/templates/index.html
@@ -8,4 +8,6 @@
     <br>
     <p>I can link to other pages within my site like this:</p>
     <a href="{% url 'main:about' %}">Click me!</a>
+    <a href="{% url 'main:contact' %}">Click me!</a>
+
 {% endblock %}
